Revision history for App-Doh

          - Serve JS from content delivery network
          - Added t::boilerplate to tests

0.6.1     2014-08-07 15:39:42
          - Added Data::Validation to user form
          - Implemented status message queue
          - Get /favicon.ico now returns 404
          - Added make_skin method to CLI
          - Renamed less files to create skin structure
          - Improved layout of profile-user form
          - Put page status on a div since defaultStatus not supported
          - Removed ForwardEvents class from JS. Doesn't work
          - Created editor.tt for the markdown editor
          - Style fixes to post navigation buttons

0.5.1     2014-07-29 18:35:58
          - Made Root controller look like a routing table
          - Made component loading a role
          - Added keybindings for the markdown editor
          - Refactored markdown editor
          - Switched status messages to JS notice board

0.4.1     2014-07-26 01:04:29
          - Added insertGraves to markdown editor
          - Added CodeMirror JS markdown editor
          - Added config user attribute to own Daemon process
          - Added Role::Component. Doh.pm contains only VERSION number
          - Streamlined the controller code
          - Server throws better exceptions
          - Patched bug in warnings::illegalproto for Perl < 5.012
          - Pass appclass in from doh-server
          - Abstracted apps env var access out to a function
          - Split Behaviour js class out into own file
          - Markdown allows class on trailing three graves
          - Added default view configuration option
          - Use App::Doh in ::Server to get VERSION in scope

0.3.1     2014-07-19 20:44:34
          - Tested on Chrome and Opera
          - Server now loads MVC components at runtime
          - Rationalised the templates
          - Fixed footer and add JS handler for content margin-bottom
          - Added minimum password length