@@ -1,7 +1,7 @@
 package App::Doh;
 
 use 5.010001;
-use version; our $VERSION = qv( sprintf '0.6.%d', q$Rev: 7 $ =~ /\d+/gmx );
+use version; our $VERSION = qv( sprintf '0.6.%d', q$Rev: 8 $ =~ /\d+/gmx );
 
 1;
 
@@ -28,7 +28,7 @@ App::Doh - An easy way to document a project using Markdown
 
 =head1 Version
 
-This documents version v0.6.$Rev: 7 $ of L<App::Doh>
+This documents version v0.6.$Rev: 8 $ of L<App::Doh>
 
 =head1 Description
 
