@@ -26,6 +26,7 @@ around 'to_psgi_app' => sub {
 
    return builder {
       mount "${point}" => builder {
+         enable "ConditionalGET";
          enable 'Deflater',
             content_type => $conf->deflate_types, vary_user_agent => TRUE;
          enable 'Static',
