@@ -1,5 +1,6 @@
 Revision history for App-Doh
 
+          - Enabled ConditionalGET in Plack stack
           - Serve JS from content delivery network
           - Added t::boilerplate to tests
 
